WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270642
[JSC] Fix thread-local AssemblerBuffer
https://bugs.webkit.org/show_bug.cgi?id=270642
Summary
[JSC] Fix thread-local AssemblerBuffer
Yusuke Suzuki
Reported
2024-03-07 11:10:40 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-07 11:10:58 PST
<
rdar://problem/124221850
>
Yusuke Suzuki
Comment 2
2024-03-07 11:20:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25589
EWS
Comment 3
2024-03-08 10:27:59 PST
Committed
275845@main
(6f9503bb4804): <
https://commits.webkit.org/275845@main
> Reviewed commits have been landed. Closing PR #25589 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug