Source/JavaScriptCore/assembler/LinkBuffer.h
@@ -391,7 +391,7 @@ private:
 #if ENABLE(BRANCH_COMPACTION)
     AssemblerData m_assemblerStorage;
 #if CPU(ARM64E)
-    AssemblerData m_assemblerHashesStorage;
+    AssemblerHashes m_assemblerHashesStorage;
 #endif
     bool m_shouldPerformBranchCompaction { true };
 #endif
